# makalah-automation-via-language-model-assisted-system

./: README.md  makalah_output.json  planner_crew_log.json  pyproject.toml
logs/: planner_crew_log.json  write_format_crew.json
src/malas/: main.py
src/malas/crews/models/: TaskOutput.py
src/malas/crews/planner_crew/: planner_crew.py
src/malas/crews/planner_crew/config/: agents.yaml  tasks.yaml
src/malas/crews/write_format_crew/: write_format_crew.py
src/malas/crews/write_format_crew/config/: agents.yaml  tasks.yaml
src/malas/mock/: dummy_factory.py  mock_llm.py
src/malas/tools/: custom_chunker.py  custom_pdf_handler.py  custom_tool.py
template/: template makalah.docx  template makalah2.docx
tests/: chonkie_result.txt  makalah_output.docx  output.json  result.txt  result_pdf.txt  test_template.py  test_tool.py  utils.py  ~$kalah_output.docx
