[project]
name = "malas"
version = "0.1.0"
description = "malas using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.75.0",
    "crewai[tools]>=0.193.2,<1.0.0",
]

[project.scripts]
kickoff = "malas.main:kickoff"
run_crew = "malas.main:kickoff"
plot = "malas.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
